--- a/src/App.css
+++ b/src/App.css
@@ -93,4 +93,7 @@
   margin-left: 15px;
   margin-right: 50px;
   font-size: 23px;
+  background-color: white;
+  border-color: #30CB70;
+  color: #30CB70;
 }
