--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,32 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+.UserImg {
+  margin-top: 30px;
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(145deg) brightness(105%) contrast(104%);
+  width: 7%;
+  height: auto;
+}
+
+.App-body {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.App-body .SubmitButton {
+  margin-top: 30px;
 }
 
 .App-link {
@@ -39,6 +58,7 @@
 
 .Navbar {
   background-color: white;
+  border-bottom-color: #30CB70;
   width: 100%;
   height: 80px;
   font-family: Arial, Helvetica, sans-serif;
