--- a/app/src/Components/Navbar.css
+++ b/app/src/Components/Navbar.css
@@ -11,11 +11,6 @@
   text-decoration: none;
 }
 
-.Navbar a:hover {
-  
-  color: #30CB70;
-} 
-
 .Navbar .NavLeftSide {
   flex: 20%;
   display: flex;
@@ -62,10 +57,28 @@
   margin-right: 40px;
   font-size: 23px;
   background-color: white;
+  border-color: #2F327D;
+  color: #2F327D;
+}
+.Navbar .NavSigning .SignUpButton:hover {
+  margin-left: 30px;
+  margin-right: 40px;
+  font-size: 23px;
+  background-color: #30CB70;
   border-color: #30CB70;
-  color: #30CB70;
+  color: white;
 }
 
 .Navbar .active a {
   color: #30CB70;
 }
+
+.Navbar a:hover {
+  color: #30CB70;
+}
+
+.Navbar .active .SignUpButton {
+  background-color: #30CB70;
+  border-color: #30CB70;
+  color: white;
+}  
