--- a/app/src/Components/FishList.css
+++ b/app/src/Components/FishList.css
@@ -7,10 +7,16 @@
     flex: 33%;
 }
 
-.FishImage {
+.Fish .FishImage {
     width: 200px;
     height: 200px;
     border-radius: 50%;
+    transition: 1s;
+}
+
+.Fish .FishImage:hover {
+    transform:scale(1.3);
+    z-index: 2;
 }
 
 .FishName {
