--- a/app/src/Components/FishList.css
+++ b/app/src/Components/FishList.css
@@ -2,6 +2,7 @@
     display: flex; 
     padding: 100px 100px 100px 100px;
     color: black;
+    margin: 0 200px 0 200px;
 }
 
 .Fish {
@@ -9,8 +10,8 @@
 }
 
 .Fish .FishImage {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
     transition: 1s;
 }
