add FishTankCreate page (WIP)

--- a/app/src/pages/Account.css
+++ b/app/src/pages/Account.css
@@ -34,7 +34,8 @@ body {
 }
 
 .FishTank {
-    border-style: solid;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+    background: whitesmoke;
     border-radius: 25px;
     display: flex;
     flex: 100%;
