--- a/app/src/Components/FishList.css
+++ b/app/src/Components/FishList.css
@@ -1,27 +1,27 @@
-.FishContainer {
+.FLFishContainer {
     display: flex; 
     padding: 100px 100px 100px 100px;
     color: black;
     margin: 0 200px 0 200px;
 }
 
-.Fish {
+.FLFish {
     flex: 33%;
 }
 
-.Fish .FishImage {
+.FLFish .FLFishImage {
     width: 250px;
     height: 250px;
     border-radius: 50%;
     transition: 1s;
 }
 
-.Fish .FishImage:hover {
+.FLFish .FLFishImage:hover {
     transform:scale(1.3);
     z-index: 2;
 }
 
-.Fish .FishName {
+.FLFish .FLFishName {
     padding-top: 50px;
     color: black;
 }
