--- a/app/src/Components/Navbar.css
+++ b/app/src/Components/Navbar.css
@@ -5,6 +5,8 @@
   height: 80px;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
+  flex-wrap: wrap;
+  overflow: auto; 
 }
 
 .Navbar a {
