--- a/app/src/Components/Carousel.css
+++ b/app/src/Components/Carousel.css
@@ -2,3 +2,8 @@
     margin-bottom: 25%;
     margin-left: 10%;
 }
+
+.carousel-item img {
+    min-width: calc(100vw - 200px);
+    height: auto;
+}
