--- a/app/src/pages/FishTankDetails.css
+++ b/app/src/pages/FishTankDetails.css
@@ -1,8 +1,8 @@
 body {
     min-height: 100vh;
     align-content: center;
-    margin-left: 100px;
-    margin-right: 100px;
+    /* margin-left: 100px;
+    margin-right: 100px; */
 }
 body h1 {
     text-align: center;
