--- a/app/src/pages/FishTankDetails.css
+++ b/app/src/pages/FishTankDetails.css
@@ -89,3 +89,24 @@ body h2 {
     text-align: center;
     font-size: 22px;
 }
+.EditButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px 20px 20px;
+}
+.EditButton button {
+    border-style: none;
+    background-color: #0A142F;
+    text-decoration: none;
+    color: white;
+    border-radius: 25px;
+    font-size: 22px;
+    width: 250px;
+    height: 100px;
+}
+.EditButton button:hover {
+    color: white;
+    border-color: #30CB70;
+    background-color: #30CB70;
+}
